Fixed brand image to fit with site color sceheme, as well as added shadow to white text so it would be visible over white parts of the banner image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,18 @@
   color: white;
 }
 
+.heroText {
+  text-shadow:
+        0.05em 0 black,
+        0 0.05em black,
+        -0.05em 0 black,
+        0 -0.05em black,
+        -0.05em -0.05em black,
+        -0.05em 0.05em black,
+        0.05em -0.05em black,
+        0.05em 0.05em black;
+}
+
 .descriptiveContainer {
   text-align: center;
 }
